# CP-Toolkit

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  cpt.desktop
.github/workflows/: appimage.yml  linux-1build.yml  package-macos.sh  release-macos.yml
docs/: architecture.md  installation.md  modules.md  stress-tester.md
resources/: app.qrc
resources/icons/: cpt.icns
resources/themes/: dark.qss
src/: main.cpp  models.h
src/core/: searchindex.cpp  searchindex.h  stresstestrunner.cpp  stresstestrunner.h  templategenerator.cpp  templategenerator.h  workspacegenerator.cpp  workspacegenerator.h
src/dal/: idatabase.h  snippetrepository.cpp  snippetrepository.h  solutionrepository.cpp  solutionrepository.h  sqlitedatabase.cpp  sqlitedatabase.h  stringlistcodec.h
src/ui/: mainwindow.cpp  mainwindow.h  sidebar.cpp  sidebar.h
src/ui/editor/: Cppsyntaxhighlighter.cpp  Cppsyntaxhighlighter.h
src/ui/search/: searchview.cpp  searchview.h
src/ui/snippets/: snippeteditorview.cpp  snippeteditorview.h  snippetlistview.cpp  snippetlistview.h
src/ui/solutions/: solutioneditorview.cpp  solutioneditorview.h  solutionlistview.cpp  solutionlistview.h
src/ui/stresstest/: stresstestview.cpp  stresstestview.h
src/ui/templates/: templateview.cpp  templateview.h
src/ui/workspace/: workspaceview.cpp  workspaceview.h
